--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">VarSign</string>
+    <string name="install_certificate">Instalar certificado</string>
+    <string name="sign_documents">Firmar documento(s)</string>
+    <string name="image_description">Imagen descriptiva</string>
 </resources>
